@@ -1,5 +1,10 @@
 2008-12-08  Scott Ellington  <scott.ellington@gmail.com>
 
+	* Cumberland.TilePyramidGenerator/Main.cs: add
+	TileProvider.BleedInPixels
+
+2008-12-08  Scott Ellington  <scott.ellington@gmail.com>
+
 	* Cumberland.TilePyramidGenerator/Main.cs:
 	* Cumberland.Data.SqlServer.Loader/README.txt:
 	* Cumberland.Data.SqlServer.Loader/Cumberland.Data.SqlServer.Loader.csproj:
